# bibletime

./: .gitattributes  .gitignore  .gitlab-ci.yml  .mailmap  .travis.yml  CMakeLists.txt  CODE_OF_CONDUCT.md  ChangeLog  FILE_HEADER.cpp.in  README  README.md  STUDY  archive.sh  build-debug.sh  build-release.sh  iso_codes_info.c.in  iso_codes_info.h  text-editor-sample.html
bibletime/: .gitignore  BibleTime.Doxyfile  BibleTime.kdevelop  CMakeLists.txt  ChangeLog  Doxyfile  INSTALL.in  LICENSE  Makefile  README  README.in  bibletime.desktop.in  bibletime.lsm.in  bibletime.m4  build-debug.sh  build-release.sh  build.sh  clucene.m4  license.html  sword.m4
bibletime/bibletime/: bibletime.cpp  bibletime.h  bibletime_dcop.cpp  bibletime_init.cpp  bibletime_slots.cpp  bibletimeapp.cpp  bibletimeapp.h  bibletimeinterface.h  config.h  main.cpp
bibletime/bibletime/backend/: bt_gbfhtml.cpp  bt_gbfhtml.h  bt_osishtml.cpp  bt_osishtml.h  bt_plainhtml.cpp  bt_plainhtml.h  bt_thmlhtml.cpp  bt_thmlhtml.h  bt_thmlplain.cpp  bt_thmlplain.h  btstringmgr.cpp  btstringmgr.h  cbookdisplay.cpp  cbookdisplay.h  cchapterdisplay.cpp  cchapterdisplay.h  cdisplayrendering.cpp  cdisplayrendering.h  cdisplaytemplatemgr.cpp  cdisplaytemplatemgr.h  centrydisplay.cpp  centrydisplay.h  cfiltertool.cpp  cfiltertool.h  chtmlexportrendering.cpp  chtmlexportrendering.h  clanguagemgr.cpp  clanguagemgr.h  cplaintextexportrendering.cpp  cplaintextexportrendering.h  creferencemanager.cpp  creferencemanager.h  cswordbackend.cpp  cswordbackend.h  cswordbiblemoduleinfo.cpp  cswordbiblemoduleinfo.h  cswordbookmoduleinfo.cpp  cswordbookmoduleinfo.h  cswordcommentarymoduleinfo.cpp  cswordcommentarymoduleinfo.h  (+18 more)
bibletime/bibletime/display-templates/: Crazy.tmpl  HighContrast.tmpl  create_code.pl
bibletime/bibletime/frontend/: btinstallmgr.cpp  btinstallmgr.h  cbtconfig.cpp  cbtconfig.h  cdragdrop.cpp  cdragdrop.h  cdragdropmgr.cpp  cdragdropmgr.h  cexportmanager.cpp  cexportmanager.h  cinfodisplay.cpp  cinfodisplay.h  cinputdialog.cpp  cinputdialog.h  cmanageindiceswidget.cpp  cmanageindiceswidget.h  cmdiarea.cpp  cmdiarea.h  cmoduleindexdialog.cpp  cmoduleindexdialog.h  coptionsdialog.cpp  coptionsdialog.h  cprinter.cpp  cprinter.h  cprofile.cpp  cprofile.h  cprofilemgr.cpp  cprofilemgr.h  cprofilewindow.cpp  cprofilewindow.h  crossrefrendering.cpp  crossrefrendering.h  cswordsetupdialog.cpp  cswordsetupdialog.h  cswordsetupinstallsourcesdialog.cpp  cswordsetupinstallsourcesdialog.h  cswordsetupmodulelistview.cpp  cswordsetupmodulelistview.h  kio_ftptransport.cpp  kio_ftptransport.h  (+3 more)
bibletime/bibletime/pics/: gen_am_pics.pl  startuplogo.xcf.bz2
bibletime/bibletime/util/: autoptrvector.h  cpointers.cpp  cpointers.h  cresmgr.cpp  cresmgr.h  ctoolclass.cpp  ctoolclass.h  directoryutil.cpp  directoryutil.h
bibletime/cmake/: BTBinaryPackageMacOS.cmake  BTBinaryPackageWindows.cmake  BTCpack.cmake  BTDeveloper.cmake  BTDocumentation.cmake  BTSourceFileList.cmake  BTUITranslation.cmake  BTWinIcon.rc  FindCLucene.cmake  FindGit.cmake  FindSword.cmake  bibletime_source_list.cmake  cmake_uninstall.cmake.in  config.h.cmake
bibletime/cmake/docs/: docs.xsl  handbook_po4a.conf  howto_po4a.conf  pdf_freebsd.xsl  pdf_mac.xsl
bibletime/cmake/scripts/: reformat_codebase.sh
bibletime/docs/: Doxyfile  license.html
bibletime/docs/development/: bibletime.spec.in  format_sourcecode.sh  ksgmltools-bug-read-me.txt  packaging-howto.txt  tips.xml
bibletime/docs/howto/: howto_po4a.conf
bibletime/docs/manpages/: bibletime.1
bibletime/docs/pending_patches/: 20081126-bibletime_sword_svn.diff  20081129-bibletime_sword_svn.diff  remove-boost.patch
bibletime/i18n/: preparetips
bibletime/i18n/handbook/: de.po  fi.po  fr.po  handbook-cs.po  handbook-de.po  handbook-es.po  handbook-fi.po  handbook-fr.po  handbook-hu.po  handbook-it.po  handbook-nl.po  handbook-pt-br.po  handbook-pt_BR.po  handbook.pot  nl.po
bibletime/i18n/howto/: bg.po  cs.po  de.po  fi.po  fr.po  howto-bg.po  howto-cs.po  howto-da.po  howto-de.po  howto-es.po  howto-fi.po  howto-fr.po  howto-hu.po  howto-it.po  howto-ko.po  howto-nl.po  howto-pt-br.po  howto-pt_BR.po  howto-ru.po  howto.pot  it.po  ko.po  nl.po  pt-br.po  ru.po
bibletime/i18n/messages/: af.qm  af.ts  bg.qm  bg.ts  bibletime_ui.ts  bibletime_ui_af.qm  bibletime_ui_af.ts  bibletime_ui_bg.qm  bibletime_ui_bg.ts  bibletime_ui_cs.qm  bibletime_ui_cs.ts  bibletime_ui_da.qm  bibletime_ui_da.ts  bibletime_ui_de.qm  bibletime_ui_de.ts  bibletime_ui_en_GB.qm  bibletime_ui_en_GB.ts  bibletime_ui_es.qm  bibletime_ui_es.ts  bibletime_ui_et.qm  bibletime_ui_et.ts  bibletime_ui_fi.qm  bibletime_ui_fi.ts  bibletime_ui_fr.qm  bibletime_ui_fr.ts  bibletime_ui_hu.qm  bibletime_ui_hu.ts  bibletime_ui_it.qm  bibletime_ui_it.ts  bibletime_ui_ko.qm  bibletime_ui_ko.ts  bibletime_ui_nl.qm  bibletime_ui_nl.ts  bibletime_ui_nn_NO.qm  bibletime_ui_nn_NO.ts  bibletime_ui_no.qm  bibletime_ui_no.ts  bibletime_ui_pl.qm  bibletime_ui_pl.ts  bibletime_ui_pt_BR.ts  (+75 more)
bibletime/pics/icons/: LICENCE  LICENSE
bibletime/pics/orig/: bibletime.svg.bz2
bibletime/pot/: howto.pot
bibletime/src/: bibletime.cpp  bibletime.h  bibletime_dbus.cpp  bibletime_dbus_adaptor.cpp  bibletime_dbus_adaptor.h  bibletime_dcop.cpp  bibletime_init.cpp  bibletime_slots.cpp  bibletimeapp.cpp  bibletimeapp.h  bibletimeinterface.h  btglobal.h  config.h  main.cpp
bibletime/src/backend/: btmoduletreeitem.cpp  btmoduletreeitem.h  cswordmodulesearch.cpp  cswordmodulesearch.h
bibletime/src/display-templates/: Blue.tmpl  Christmastide.tmpl  Crazy.tmpl  Green.tmpl  HighContrast.tmpl  Simple.tmpl  basic_template.txt  create_code.pl  names.conf  template-init.cpp
bibletime/src/frontend/: btaboutdialog.cpp  btaboutdialog.h  btaboutmoduledialog.cpp  btaboutmoduledialog.h  btbookshelfdockwidget.cpp  btbookshelfdockwidget.h  btbookshelfview.cpp  btbookshelfview.h  btbookshelfwidget.cpp  btbookshelfwidget.h  btmenuview.cpp  btmenuview.h  btmodulechooserdialog.cpp  btmodulechooserdialog.h  btmoduleindexdialog.h  btopenworkaction.cpp  btopenworkaction.h  cbtconfig.cpp  (+23 more)
(+2999 files in other folders)
